# pigit

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  Makefile  README.md  _Users_haha_projects_pigit__claude_worktrees_neo-ui-v3  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  ci.yml  testing.yml
docs/: _emoji_codes.txt  bash_pigit_comp  extra_cmds.py  fish_pigit_comp  pigit-dev_zsh_comp  pigit.conf  pigit_bash_comp  pigit_fish_comp  pigit_zsh_comp  termui_compose_design.md
examples/: pigit.toml
pigit/: __init__.py  __main__.py  app.py  app_branch.py  app_chrome.py  app_command_palette.py  app_commit.py  app_commit_editor.py  app_commit_graph.py  app_contribution_graph.py  app_diff.py  app_header_state.py  app_inspector.py  app_palette.py  app_preview.py  app_recent_actions.py  app_search_filter.py  app_stash.py  app_status.py  app_theme.py  app_types.py  argparse_utils.py  codecounter.py  common.py  compat.py  config.py  config_data.py  console.py  console_scripts.py  const.py  context.py  decorator.py  entry.py  git_model.py  git_utils.py  gitignore.py  gitinfo.py  hook.py  info.py  init.py  (+15 more)
pigit/cmdparse/: parser.py
pigit/comm/: executor.py  singleton.py  utils.py
pigit/command_processor/: __init__.py  cmd_func.py  cmds.py  interaction.py  model.py
pigit/common/: __init__.py  emoji.py  emotion.py  escape.py  executor.py  func.py  git.py  git_model.py  git_utils.py  str_table.py  str_utils.py  style.py  utils.py
pigit/ext/: executor.py  executor_factory.py  func.py  lcstat.py  log.py  singleton.py  utils.py
pigit/git/: __init__.py  _cmd_func.py  _cmds.py  _repo_status.py  cmd.py  cmd_builtin.py  cmd_catalog.py  cmd_func.py  cmd_picker.py  cmd_proxy.py  define.py  local_git.py  managed_repos.py  model.py  options.py  processor.py  proxy.py  repo.py  repo_cd_picker.py  repo_multi_select_picker.py  shortcmds.py
pigit/gitlib/: _cmd_func.py  options.py  processor.py  shortcmds.py
pigit/handlers/: __init__.py  base_handler.py  cmd_handler.py  cmd_new_handler.py  cmd_picker.py  cmd_picker_data.py  open_handler.py  repo_commands.py  repo_handler.py  repo_picker.py  tui_handler.py
pigit/interaction/: __init__.py  base.py  commit_interaction.py  loop.py  model.py  run.py  screen.py  status_interaction.py  util.py  widgets.py
pigit/interactive/: __init__.py  layout.py  list_picker.py  repo_cd.py  tty_primitives.py
pigit/processor/: __init__.py  cmd_func.py  cmds.py
pigit/render/: __init__.py  box.py  console.py  emoji.py  errors.py  markup.py  new_table.py  ratio.py  segment.py  str_utils.py  style.py  table.py
pigit/shellcompletion/: __init__.py  base.py  bash.py  fish.py  zsh.py
pigit/termui/: README.md  __init__.py  _application.py  _async_task.py  _bindings.py  _color.py  _component.py  _component_base.py  _component_containers.py  _frame.py  (+65 more)
pygittools/: __init__.py  __main__.py  model.py
tests/: conftest.py  interactive_run.py  interactive_run2.py  old_input.py  paths.py  pigit.toml  pytest.ini  recommendation_algorithm.py  run.py  run_interactive.py  test_about_git.py  test_all_pigit.py  test_argsparse.py  test_auto_refresh.py  test_cmd_processor.py  test_cmdparse.py  test_cmdparser.py  test_common.py  test_common_executor.py  test_complete.py  test_config.py  test_counter.py  test_executor_factory.py  test_ext.py  test_ext_executor.py  test_ext_lcstat.py  test_fetch_gitignore.py  test_git.py  test_git_cmd.py  test_git_ignore.py  test_git_proxy_extended.py  test_gitignore.py  test_gitlib.py  test_handlers_and_tui_utils.py  test_info.py  test_init.py  test_interactive.py  test_lcstat.py  test_log_and_executor_edges.py  test_pigit.py  (+13 more)
tools/: debug_keys.py  gitignore.py  gitignore_util.py  run.py  venv.sh
(+164 files in other folders)
